# Project-5

./: Automaton.h  BadBlockCommentAutomaton.h  BadStringAutomaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommentAutomaton.h  Database.h  DatalogProgram.h  Graph.h  Header.h  IDAutomaton.h  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Node.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  Relation.h  Rules.h  StringAutomaton.h  Token.cpp  Token.h  Tuple.h  main.cpp
InAndOut/: Hw5a.txt
